--- a/Client/Pages/TransactionsOverview.razor.css
+++ b/Client/Pages/TransactionsOverview.razor.css
@@ -43,6 +43,7 @@
     align-items: center;
     justify-content: space-between;
     width: 94%;
+    padding: 3vh 0 0 0;
 }
 
 .outerPage {
@@ -547,6 +548,59 @@
     column-gap: 1vh;
 }
 
+.outerOverdraft {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    width: 90%;
+    /* max-width: 500px; */
+    padding: 3.5vh;
+    background: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+    border: 0.2px solid rgba(0, 0, 0, 0.30);
+    background: #FFF;
+    box-shadow: 0px 147px 41px 0px rgba(21, 36, 147, 0.00), 0px 94px 38px 0px rgba(21, 36, 147, 0.01), 0px 53px 32px 0px rgba(21, 36, 147, 0.05), 0px 24px 24px 0px rgba(21, 36, 147, 0.09), 0px 6px 13px 0px rgba(21, 36, 147, 0.10);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 3vh;
+    row-gap: 0.4vh;
+    height: 63vh;
+}
+
+.overdraftWindow {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* text-align: right; */
+    justify-content: space-around;
+    height: 100%;
+}
+
+.outerText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.outerCloseBtn {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+    .titleText {
+        color: red;
+        font-weight: 600;
+    }
+
 .overlay {
     position: fixed;
     /* Fixed position to cover the whole screen */
@@ -802,3 +856,23 @@
         font-size: 14px;
     }
 }
+
+.profileAndStreak {
+    position: relative;
+    display: inline-block;
+}
+
+.streakBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline: inherit;
+    position: absolute;
+    z-index: 1;
+    top: 33%;
+    left: 50%;
+    width: 111%;
+}
+
