--- a/Client/Components/CategoryComponent.razor.css
+++ b/Client/Components/CategoryComponent.razor.css
@@ -86,8 +86,9 @@
     row-gap: 5vh;
     /* height: 100%; */
     align-content: center;
-    padding-bottom: 7vh;
+    padding-bottom: 5vh;
     padding-top: 4vh;
+    margin-bottom: 2vh;
 }
 
 
@@ -546,3 +547,23 @@
         color: inherit; /* Inherit color from parent */
         color: #636363
     }
+
+.overdraftBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    background-color: rgba(249, 80, 80, 0.13);
+    border: 1px solid rgba(249, 80, 80, 0.73);
+    border-radius: 0.25rem;
+    padding: 0.5vh 2vw;
+    display: flex;
+    width: 28%;
+    font-weight: 600;
+    justify-content: space-between;
+    box-shadow: 0px 4px 6px rgba(255, 0, 0, 0.1), 0px 6px 8px rgba(255, 0, 0, 0), 0px 8px 10px rgba(255, 0, 0, 0), 0px 10px 20px rgba(255, 0, 0, 0);
+}
