איפוס חלון הוספת קטגוריה בין הוספות

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1271,7 +1271,7 @@ else
     public void openCategoryOverlay()
     {
         openAddCatOverlay = !openAddCatOverlay;
-
+        newCategory = new CategoryToAdd();
     }
 
     public void openEditCategoryOverlay()
