--- a/Client/Components/CategoryComponent.razor
+++ b/Client/Components/CategoryComponent.razor
@@ -74,7 +74,9 @@
                                 <div class="subCatLine">
                                 </div>
                             </div>
-                            <div class="btn-icon"><img src="../css/images/+.svg" /></div>
+                            <div class="outerPlusBtn">
+                                <div class="btn-icon"><img src="../css/images/+.svg" /></div>
+                            </div>
                         </div>
                     </button>
                 }
@@ -272,7 +274,7 @@
     getSearchedSubCat();
 }
 
-@if (overdraftDetected)
+@if (overdraftDetected && !noOverdraftOptions)
 {
     <div class="overlay">
         <div class="outerOverdraft">
@@ -421,6 +423,42 @@
     </div>
 }
 
+@if (noOverdraftOptions)
+{
+    <div class="overlay">
+        <div class="outerOverdraft">
+            <div class="overdraftWindow">
+
+                <div class="outerText">
+                    <div class="outerCloseBtn">
+                        <button class="modal-close-btn" @onclick="()=>noOverdraftOptions = false"><img src="../css/images/close x.svg" /></button>
+                    </div>
+
+                    <h3 class="titleText">חרגת...</h3>
+
+                    <div>
+                        אין תתי קטגוריות בעלות תקציב
+                        פנוי להעברה.
+
+                    </div>
+                    <div>
+                        <span><b>טיפ מאיתנו-</b></span>
+                        לקראת החודש הבא,
+                        כדאי להעריך מחדש את התקציב של
+                        תתי הקטגוריות השונות.
+                    </div>
+
+
+                    <div class="outerBtns">
+                        <img style="height: 31vh;" src="../css/images/no-overdraft-options.svg" />
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+}
+
 @code {
 
     [Parameter]
@@ -503,6 +541,7 @@
     string msg = "";
     string popupTitle = "מחיקת קטגוריה";
     string popupBodyText = "אתה עומד למחוק את קטגוריית ";
+    bool noOverdraftOptions = false;
 
 
     int newSubCatID = 0;
@@ -628,7 +667,7 @@
             newSubCatToShow = new SubCategoryToShow();
             // להפעיל מחדש פונקציה שמושכת את האלמנטים בדף הבית
             Console.WriteLine("new sub category added");
-
+            titleInput = "";
             newSubCategory = new SubCategoryToAdd();
             isSubCategoryAddOverlayOpen = false;
         }
@@ -672,7 +711,7 @@
 
 
             Console.WriteLine("New sub-category added, ID: " + newSubCatID);
-
+            titleInput = "";
             // Reset the newSubCategory object for a new entry.
             newSubCategory = new SubCategoryToAdd();
 
@@ -782,18 +821,18 @@
 
                 if (!categoryTypeIndicator)
                 {
-                    double? tempBudget=0;
+                    double? tempBudget = 0;
                     if (subcategory.monthlyPlannedBudget > editedSubCat.monthlyPlannedBudget)
                     {
-                        tempBudget = (subcategory.monthlyPlannedBudget - editedSubCat.monthlyPlannedBudget)*-1;
+                        tempBudget = (subcategory.monthlyPlannedBudget - editedSubCat.monthlyPlannedBudget) * -1;
                     }
                     else if (subcategory.monthlyPlannedBudget < editedSubCat.monthlyPlannedBudget)
                     {
-                        tempBudget = (editedSubCat.monthlyPlannedBudget- subcategory.monthlyPlannedBudget);
+                        tempBudget = (editedSubCat.monthlyPlannedBudget - subcategory.monthlyPlannedBudget);
                     }
 
                     subcategory.monthlyPlannedBudget = editedSubCat.monthlyPlannedBudget;
-                    if (tempBudget!=null)
+                    if (tempBudget != null)
                     {
                         updateBudget.InvokeAsync(tempBudget);
                     }
@@ -898,7 +937,7 @@
 
     public async Task checkOverdraft(int subCatID)
     {
-        var getOverdraftDetails= await Http.GetAsync("api/Present/GetSubCategory/"+subCatID);
+        var getOverdraftDetails = await Http.GetAsync("api/Present/GetSubCategory/" + subCatID);
         if (getOverdraftDetails.IsSuccessStatusCode)
         {
             SubCategoryToShow tempSub = await getOverdraftDetails.Content.ReadFromJsonAsync<SubCategoryToShow>();
@@ -914,7 +953,7 @@
                 }
             }
         }
-        
+
         var overdraftRes = await Http.GetAsync("api/Transactions/showOverdraft/" + subCatID + "/" + userID);
         if (overdraftRes.IsSuccessStatusCode)
         {
@@ -927,6 +966,11 @@
             overDraftSubCategory.id = closeOverdraftOpts[closeOverdraftOpts.Count - 1].id;
             overDraftSubCategory.monthlyPlannedBudget = closeOverdraftOpts[closeOverdraftOpts.Count - 1].monthlyPlannedBudget;
             chosenSubCategory = new OverBudgetToShow();
+
+            if (closeOverdraftOpts.Count <= 1 && closeOverdraftOpts[0].id == subCatID)
+            {
+                noOverdraftOptions = true;
+            }
         }
         else
         {
@@ -1000,8 +1044,8 @@
 
     public void NotTreatedOverdraft()
     {
-        overdraftDetected=false;
-        overdraftNotTreated=true;
+        overdraftDetected = false;
+        overdraftNotTreated = true;
     }
 
     public void updateTransSumInStatTable(double trans)
