--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -14,62 +14,72 @@
 
 
 
-<div class="budget-card" style="background-color:@subCatColor;border:1px solid @catOutlineColor">
-    <div class="optionsMenu">
-        @if (isOptBtnClicked)
-        {
-            <OptionsMenuComponent editBtnClicked="getUserCategories" deleteBtnClicked="deleteSubCatPopUp"></OptionsMenuComponent>
-        }
-    </div>
 
-    <div class="budget-header">
-        <div class="textAndLine">
-            <div class="outerTitleAndOverdraft">
-                <h3 class="subCatTitle">
-                    @subCategoryTitle
-
-                </h3>
-                @if (totalSpendings > budget && categoryTypeIndicator == false || overdraftNotTreated == true)
-                {
-                    isOverdraft = true;
-                    <button class="overdraftBtn" @onclick="triggerOverdraftOverlay"><img src="../css/images/overdtaft.svg" /></button>
-                }
-            </div>
-
-            <div class="subCatLine">
-            </div>
+    <div class="budget-card" style="background-color:@subCatColor;border:1px solid @catOutlineColor">
+        <div class="optionsMenu">
+            @if (isOptBtnClicked)
+            {
+                <OptionsMenuComponent editBtnClicked="getUserCategories" deleteBtnClicked="deleteSubCatPopUp"></OptionsMenuComponent>
+            }
         </div>
 
+        <div class="budget-header">
+            <div class="textAndLine">
+                <div class="outerTitleAndOverdraft">
+                    <div class="subCatTitle">
 
 
-        <div class="closedAndOpenMenu">
-            <button class="options-button" @onclick="toggleOptionsMenu"><img src="../css/images/option menu.svg" /></button>
+                        @subCategoryTitle
+
+
+                    </div>
+                    @if (totalSpendings > budget && categoryTypeIndicator == false || overdraftNotTreated == true)
+                    {
+                        isOverdraft = true;
+                        <button class="overdraftBtn" @onclick="triggerOverdraftOverlay"><img src="../css/images/overdtaft.svg" /></button>
+                    }
+                </div>
+
+                <div class="subCatLine">
+                </div>
+            </div>
+
+
+
+            <div class="closedAndOpenMenu">
+                <button class="options-button" @onclick="toggleOptionsMenu"><img src="../css/images/option menu.svg" /></button>
+
+            </div>
+
 
         </div>
+        <div class="outerBudgetInfo">
+            <div class="budget-info">
+            @if (!categoryTypeIndicator)
+            {
+
+                <button class="budget-progress" @onclick="goToTransactionsPage">
+                    @budget /  @Math.Round(totalSpendings,2) ₪
+                </button>
 
 
+            }
+            else
+            {
+                <button class="budget-progress" @onclick="goToTransactionsPage">
+                    @Math.Round(totalSpendings,2) ₪
+                </button>
+
+
+            }
+        </div>
+        </div>
+        
+        <button class="add-transaction-button" @onclick="openAddTransOverlay"><img src="../css/images/+2.svg" /></button>
     </div>
-
-    <div class="budget-info">
-        @if (!categoryTypeIndicator)
-        {
-
-            <button class="budget-progress" @onclick="goToTransactionsPage">
-                @budget /  @Math.Round(totalSpendings,2) ₪
-            </button>
-
-            <button class="add-transaction-button" @onclick="openAddTransOverlay"><img src="../css/images/+2.svg" /></button>
-        }
-        else
-        {
-            <button class="budget-progress" @onclick="goToTransactionsPage">
-                @Math.Round(totalSpendings,2) ₪
-            </button>
-
-            <button class="add-transaction-button" @onclick="openAddTransOverlay"><img src="../css/images/+2.svg" /></button>
-        }
-    </div>
-</div>
+    
+        
+    
 
 
 
@@ -118,21 +128,21 @@
                         <div class="input-container">
                             <label class="titleName" for="amount">שם תת קטגוריה</label>
                             <input class="titleBox" type="text" id="amount" placeholder="שם תת הקטגוריה" @bind="subCatToEdit.subCategoryTitle" @oninput="SubCatTitleLengthCounter" maxlength="18" minlength="2" />
-                            <div class="counter">
-                                <div class="outerTitleName">
+                            @*<div class="counter">
+                    <div class="outerTitleName">
 
 
-                                    @if (titleInputLength > 0)
-                                    {
-                                        titleInput = titleInputLength.ToString();
-                                        <span>@titleInput/18</span>
-                                    }
-                                    else
-                                    {
-                                        <span>0/18</span>
-                                    }
-                                </div>
-                            </div>
+                    @if (titleInputLength > 0)
+                    {
+                    titleInput = titleInputLength.ToString();
+                    <span>@titleInput/18</span>
+                    }
+                    else
+                    {
+                    <span>0/18</span>
+                    }
+                    </div>
+                    </div>*@
                         </div>
                     </div>
 
@@ -669,7 +679,6 @@
     private void SubCatTitleLengthCounter(ChangeEventArgs e)
     {
         titleInput = e.Value.ToString();
-
         titleInputLength = titleInput.Length;
     }
-            }
+}
