--- a/Client/Components/SubCategoryComponent.razor.css
+++ b/Client/Components/SubCategoryComponent.razor.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position:relative;
 }
 
 @media (max-width: 340px) {
@@ -93,6 +94,16 @@
     width: 3.3125rem;
     height: 3.3125rem;
     background: linear-gradient(180deg, #6775F4 3%, #5B69E6 97%);
+    position: absolute;
+    /* bottom: -68%; */
+    left: 50%;
+    top: 82%;
+    transform: translateX(-50%);
+    width: 3.3125rem;
+    height: 3.3125rem;
+    border-radius: 50%;
+    box-sizing: border-box;
+}
 }
 
 
@@ -108,7 +119,6 @@
     width: 7rem;
     height: 0.1vh;
     background-color: #D6D9F1;
-    margin-bottom: 3vh;
 }
 
 .textAndLine {
@@ -134,7 +144,7 @@
     /* font-size: 16px; */
     color: #030942;
     font-weight: 400;
-    width: 7.50688rem;
+    width: 8.47rem;
     font-size: 1rem;
     height: 2.30375rem;
     border-radius: 0.25rem;
@@ -457,4 +467,10 @@
     font: inherit;
     cursor: pointer;
     outline: inherit;
+}
+.outerBudgetInfo {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
 }
